crates/toml/tests/snapshots/invalid/datetime/feb-30.stderr
TOML parse error at line 1, column 36
  |
1 | "only 28 or 29 days in february" = 1988-02-30T15:15:15Z
  |                                    ^^^^^^^^^^^^^^^^^^^^
invalid date, expected day between 01 and 29
